samples/_failures_safe/1761151629_c23287_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f0d1639a.c: In function ‘main’:
./samples/SAFE/__tmp_f0d1639a.c:145:9: error: expected declaration or statement at end of input
  145 |         printf("1. Matrix Addition\n");
      |         ^~~~~~
./samples/SAFE/__tmp_f0d1639a.c:145:9: error: expected declaration or statement at end of input
